fix CORS config - simplify and fix production issue
Co-authored-by: Cursor <cursoragent@cursor.com>